# NeuralOperator_for_CTM

./: .gitignore  Neural_Operator_Climate_Project_Roadmap.md  README.md  code_structure.txt  pyproject.toml
configs/: data.yaml  eval_rollout.yaml  grad_fidelity.yaml  inverse.yaml  train_fno.yaml  train_hybrid.yaml  train_unet.yaml
scripts/: eval_rollout.py  grad_fidelity.py  make_data.py  make_figures.py  run_all.sh  run_inverse.py  train.py
src/neural_transport_operators.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ntops/: __init__.py
src/ntops/data/: __init__.py  dataset.py  generate.py  io.py  transforms.py
src/ntops/inverse/: __init__.py  compare.py  gradients.py  objectives.py  solve_inverse.py
src/ntops/models/: __init__.py  cnn.py  fno.py  hybrid.py  layers.py  unet.py
src/ntops/pde/: __init__.py  fields.py  grid.py  integrators.py  metrics.py  solver_fd.py
src/ntops/train/: __init__.py  eval.py  loop.py  losses.py  optim.py  rollout.py
src/ntops/utils/: __init__.py  checkpointing.py  logging.py  plotting.py  seed.py
tests/: test_advection_translation.py  test_gradients_fdcheck.py  test_solver_conservation.py
